# termglyph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  termglyph_color.c  termglyph_printf.c  test.ppm  treestock.ppm
.github/workflows/: cmake-ubuntu.yml
include/: termglyph.h  termglyph_color.h  termglyph_printf.h
include/termglyph/: print.h  text_attributes.h  tg_printf.h
src/: print.c  termglyph_color.c  termglyph_printf.c  text_attributes.c  tg_printf.c
tg_highlight/: package.json  termglyph-highlight-0.1.0.vsix
tg_highlight/images/: icon.png~
tg_highlight/syntaxes/: termglyph.tmLanguage.json
